Fixed pom package